# khoai-xgboost-chess

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
config/: Setting.py
core/: model_inference.c  model_inference.py  model_inference.pyx  ui.py  utils.py
play/: gui.py  terminal.py
train/: data_pipeline.py  train_xgboost.py
training/: data_pipeline.py  train_xgboost.py
