[tool.poetry]
name = "khoai-xgboost-chess"
version = "0.1.0"
description = "AI Chess Engine using XGBoost - Tabular Data Approach"
authors = ["duongess <duongcantat@gmail.com>"]

packages = [
    { include = "main.py" },
    { include = "core" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = ">=0.12.3", extras = ["all"]}
python-chess = "^1.999.0"
xgboost = "^2.0.3"
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "1.5.2"

[tool.poetry.scripts]
khoai = "main:app"